# logos-rln-gifter

./: .gitignore  KEYCARD_AUTH_CONTEXT.md  KEYCARD_E2E_SIM_CONTEXT.md  KEYCARD_GUI_CONTEXT.md  README.md  logos_rln_gifter.nimble
cbind/: cbind_gifter.nim  libp2p_gifter.h
rust/keycard-capture-module/: .gitignore  CMakeLists.txt  flake.nix  metadata.json
rust/keycard-capture-module/rust-lib/: Cargo.toml
rust/keycard-capture-module/rust-lib/src/: lib.rs
rust/rln-gifter-module/: CMakeLists.txt  flake.nix  metadata.json
rust/rln-gifter-module/rust-lib/: Cargo.toml
rust/rln-gifter-module/rust-lib/src/: auth.rs  client.rs  lib.rs  lp.rs  server.rs  wire.rs
src/rln_gifter/: client.nim  eip191.nim  protobuf_shims.nim  protocol.nim  rpc.nim  rpc_codec.nim
tests/: test_all  test_all.nim  test_codec.nim  test_eip191.nim
tools/: mint_attest.py
